@@ -1,5 +1,7 @@
 Changelog for getResources.
 
+- [#49] Allow comma-delimited list of TV names as includeTVs or processTVs value
+
 getResources 1.3.1-pl (July 14, 2011)
 ====================================
 - [#43] Allow 0 as idx property
